Fix the too big Pull-to-refresh message and icon.

--- a/styles/mobile/flat.less
+++ b/styles/mobile/flat.less
@@ -879,8 +879,9 @@
 .km-flat .km-scroller-pull
 {
     font-size: 1em;
-    width: 3em;
-    height: 3em;
+    width: 2.5em;
+    height: 2.5em;
+    top: .25em;
     white-space: nowrap;
 }
 
@@ -905,8 +906,9 @@
 .km-flat .km-scroller-pull .km-template
 {
     position: absolute;
-    line-height: 2.5em;
+    line-height: 2em;
     font-size: 1.2em;
+    min-width: 0;
     top: 0;
     left: 3em;
 }
